<resources>
    <string name="app_name">WorkerManager</string>

    <string name="bu_yerga_yozing">Bu yerga yozing</string>
    <string name="usd_dollar">USD Dollar</string>
    <string name="o_zgartirish">O`zgartirish</string>
    <string name="bugungi_kurs1">Bugungi kurs</string>
    <string name="usd_dollar_name">USD Dollar</string>
    <string name="one">1</string>
    <string name="usd_short">USD</string>
    <string name="equals">=</string>
    <string name="_10_600_00_numbersum">10.600.00</string>
    <string name="uzs_short">. UZS</string>
    <string name="yangilandi">yangilandi:</string>
    <string name="_30_07_2021_day_mont">30.07.2021</string>
    <string name="_17_30_time">17:30</string>
    <string name="yoqtirganlar_mavjud_emas">Yoqtirganlar_mavjud_emas</string>
    <string name="uzb_eng_text_bottom"><![CDATA[Uzb > Eng]]></string>
    <string name="bugungi_kurs2">Bugungi kurs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>